<resources>
    <string name="app_name">PropertyCross</string>
    <string name="main_activity_title">Search properties</string>
    <string name="option_rent">To Rent</string>
    <string name="option_buy">To Buy</string>
    <string name="location_icon">Search using my current location</string>
    <string name="location_hint">City/Postal Code/Address</string>
    <string name="search_hint_pulse">Press</string>
    <string name="search_hint_sentence">to search within you current location</string>
    <string name="previous_results_title">Recent Searches</string>
    <string name="results_tab_all">All</string>
    <string name="results_tab_rent">To Rent</string>
    <string name="results_tab_sell">For Sale</string>
    <string name="results_subtitle_text_sale">%.0fm2 for sale</string>
    <string name="results_subtitle_text_rent">%.0fm2 to rent</string>
    <string name="results_price">%.0f€</string>
    <string name="no_results_found">No results found</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">1719565601592476</string>
    <string name="favorites_toolbar_title">Favorites</string>
    <string name="main_activity_toolbar_favorite">Favorites</string>
    <string name="main_activity_toolbar_title">Search Properties</string>
    <string name="recent_searches_single_result_subtitle">result</string>
    <string name="recent_searches_multiple_result_subtitle">results</string>
    <string name="recent_searches_no_results">Couldn\'t find recent searches</string>
    <string name="profile_title">User\'s profile</string>
    <string name="facebook_login_error">Couldn\'t login to Facebook</string>
    <string name="facebook_login_successful">Facebook login successful</string>
    <string name="drawer_profile_item">Profile</string>
    <string name="drawer_favorites_item">Favorites</string>
    <string name="profile_user_name">User\'s name</string>
    <string name="profile_password_label">Password</string>
    <string name="profile_repeat_password_label">Repeat your password</string>
    <string name="profile_profile_label">Profile</string>
    <string name="profile_profile_opcional_label">(optional)</string>
    <string name="profile_name_label">Name</string>
    <string name="profile_surname_label">Surname</string>
    <string name="profile_mail_label">Email</string>
    <string name="profile_notifications_label">Notifications</string>
    <string name="profile_notifications_switch">Receive notifications</string>
    <string name="profile_location_label">About new Properties of your interest located in</string>
    <string name="profile_seeker_label">Inside a radius of</string>
    <string name="profile_save_button_text">SAVE</string>
    <string name="profile_save_toast_message">Profile saved</string>
    <string name="details_call_text">CALL</string>
    <string name="details_write_text">WRITE</string>
    <string name="details_buy_text">BUY</string>
    <string name="details_comments_title">Comments</string>
    <string name="details_comment_placeholder">Write your comment</string>
    <string name="details_add_photo_button_text">Add photo</string>
    <string name="details_send_comment_button_text">Send comment</string>
    <string name="details_lastchecked_on_text">"Last checked on "</string>
    <string name="comment_default_author">You</string>

</resources>
