<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.lasalle.second.part.propertycross.MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/toolBarStyle"
        android:popupTheme="@style/toolBarStyle">
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/option_buy"
                        android:id="@+id/main_search_option_buy"
                        android:checked="true"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical" />

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/option_rent"
                        android:id="@+id/main_search_option_rent"
                        android:checked="true"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_my_location_24dp"
                            android:clickable="true"
                            android:contentDescription="@string/location_icon"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/locationIcon"/>

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/main_search_edit_text"
                            android:layout_weight="1"
                            android:hint="@string/location_hint"
                            android:imeOptions="actionSearch"
                            android:singleLine="true" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/floatingCancelLayout"
                            android:visibility="gone">

                            <android.support.design.widget.FloatingActionButton
                                android:id="@+id/cancelSearchActionButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_clear_24dp"
                                app:elevation="4dp" />

                            <ProgressBar
                                android:id="@+id/view_progress"
                                style="?android:attr/progressBarStyleLarge"
                                android:layout_width="76dp"
                                android:layout_height="76dp"
                                android:indeterminate="true"
                                android:indeterminateTintMode="src_in"
                                android:indeterminateTint="@color/colorPrimary"
                                android:layout_centerInParent="true" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/search_hint_pulse"
                            android:layout_gravity="center_vertical" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_my_location_24dp"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/location_icon"
                            android:tint="#8f8f8f"
                            android:layout_marginLeft="1dp"
                            android:layout_marginRight="1dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/search_hint_sentence"
                            android:layout_gravity="center_vertical" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#e3e3e3"
            android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/previous_results_title" />

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_previous_results_list_view" />

            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/main_navigation_drawer_list"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|start"
            android:background="#ffeeeeee"/>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>

