<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_photoTitle"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/flat_sample_image_4"
        android:cropToPadding="false"
        android:paddingBottom="8dp"
        android:adjustViewBounds="true"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/details_last_viewed_label" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/details_price_label"
                    android:textColor="@android:color/black"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/details_description_label"
                    android:paddingBottom="8dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_call_24dp"
                        android:contentDescription="@string/details_call_text"
                        android:layout_gravity="center_vertical"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_call_text"
                        android:id="@+id/textView"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email_24dp"
                        android:contentDescription="@string/details_write_text"
                        android:layout_gravity="center_vertical"
                        android:tint="@color/colorPrimary"
                        android:id="@+id/imageView" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_write_text"
                        android:id="@+id/textView2"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_shopping_basket_24dp"
                        android:contentDescription="@string/details_buy_text"
                        android:layout_gravity="center_vertical"
                        android:tint="@color/colorPrimary"
                        android:id="@+id/imageView2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_buy_text"
                        android:id="@+id/textView3"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/details_comments_title"
                    android:id="@+id/textView4"
                    android:paddingTop="8dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/details_comment_input"
                    android:imeOptions="actionSend"
                    android:singleLine="true"
                    android:hint="@string/details_comment_placeholder" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView3"
                            android:src="@drawable/ic_camera_alt_24dp"
                            android:tint="@color/colorPrimary"
                            android:layout_gravity="center_vertical" />

                        <Button
                            style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details_add_photo_button_text"
                            android:id="@+id/details_add_photo_button"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/colorPrimary"
                            android:onClick="CameraClick"/>

                    </LinearLayout>

                    <!--Button
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_send_comment_button_text"
                        android:id="@+id/details_send_comment_button" /-->
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:id="@+id/details_new_photo_view"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/details_comments_list"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>